--- a/dubbingeng.html
+++ b/dubbingeng.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="Devcrud">
-    <title>හඬ කැවීමේ තරගාවලිය</title>
+    <title>Dubbing Competition</title>
    
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
@@ -24,19 +24,19 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link" href="indexeng.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">About</a>
+                    <a class="nav-link" href="indexeng.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Gallary</a>
+                    <a class="nav-link" href="indexeng.html">Gallary</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Social Media</a>
+                    <a class="nav-link" href="indexeng.html">Social Media</a>
                 </li>
 				<li class="nav-item">
-                    <a class="nav-link" href="index.html">Event</a>
+                    <a class="nav-link" href="indexeng.html">Event</a>
                 </li>
 				<li class="nav-item">
                     <a class="nav-link" href="#contact">Contact </a> <!--<span class="sr-only"></span></a>-->
@@ -48,16 +48,16 @@
             </a>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#home">හඬ කැවීම <span class="sr-only"></span></a>
+                    <a class="nav-link" href="#home">Dubbing<span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="photomanipulation.html">ඡායාරූප සැකසීම</a>
+                    <a class="nav-link" href="photomanipulationeng.html">Photo Manip..</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="comiccharacter.html">ඩිජිටල් චරිත සිතුවම් </a>
+                    <a class="nav-link" href="comiccharactereng.html">Comic Character </a>
                 </li>
                 <li class="nav-item">
-                    <a href="https://forms.gle/DAHDQkRpsyEmDgAm8" class="btn btn-primary ml-xl-4">Upload</a>
+                    <a href="https://forms.gle/fZN97nDpnXTURfNn7" class="btn btn-primary ml-xl-4">Upload</a>
                 </li>
             </ul>
         </div>
@@ -65,10 +65,10 @@
     <!-- header -->
     <header id="home" class="header dubbing">
         <div class="overlay text-white text-center">
-            <h1 class="display-2 font-weight-bold my-3">"රූසර ඩිජිටල් නිර්මාණ තරගාවලිය"</h1>
-            <h3 class="display-4 mb-5">හඬ කැවීමේ තරගාවලිය </h3>
+            <h1 class="display-2 font-weight-bold my-3">"රූසර-2022, The Digital Art Competition"</h1>
+            <h3 class="display-4 mb-5">Dubbing Competition </h3>
 			<h2 class="display-4 mb-5">2022</h2>
-            <a class="btn btn-lg btn-primary" href="https://forms.gle/DAHDQkRpsyEmDgAm8">Upload Here <i class = "ti-upload"></i></a>
+            <a class="btn btn-lg btn-primary" href="https://forms.gle/fZN97nDpnXTURfNn7">Upload Here <i class = "ti-upload"></i></a>
         </div>
     </header>
 
@@ -79,45 +79,32 @@
             <div class="col-lg-6">
                 <div class="row justify-content-center">
                     <div class="col-sm-8 py-5 my-5">
-                        <h3 class="mb-4">තරග නීති  සහ රෙගුලාසි</h3>
-                        <p><b>තරගයට සහබාගී වන සියළු තරගකරුවන් තරග නීති රීති සියල්ල හොදින් කියවා අවබෝධ කරගත යුතුය.</p></b>
-						<p>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
+                        <h3 class="mb-4" style="text-align:center">COMPETITION TERMS AND CONDITIONS</h3>
+                        <p style="text-align:justify"><b>EVERYONE PARTICIPATING IN THE COMPETITION SHOULD READ AND UNDERSTAND ALL THE RULES OF THE COMPETITION.</p></b>
+						<p style="text-align:justify">
+						<li>Competitors must submit their design online on or before the due date.</li>
+						<li>Only one design can be submitted per team.</li>
+						<li>Candidates can apply individually or in groups, with a maximum of five members per group.</li>
+						<li>Team members can play a video of their choice at will.</li>
+						<li>Political mudslinging should eliminate racist discourse. if such dialogue videos are included, they will be removed from the competition.</li>
+						<li>Do not use obscene words or videos. if such dialogue videos are included, they will be removed from the competition.</li>
+						<li>The duration of the video should be limited to three minutes. Videos longer than three minutes will be removed from the competition.</li>
+						<li>Uploaded video size should be less than 500MB.</li>
+						<li>Videos should be presented in MP4 format. You can use any frame size except 1920*1080.</li>
+						<li>All submitted videos should not have any kind of logo, copyright marks, identifying marks, borders or any other type of markers.</li>
+						<li>The competition consists of two categories: the most creative and the most popular design.</li>
+						<li>The most creative videos will be selected by the jury and the 10 best creative videos will be posted on our Facebook page and the most popular creation will be selected by Facebook likes.</li>
+						<li>The decision of the tribunal is final.</li>
+						<li>THE JURY IS PRIMARILY INVOLVED IN AWARDING POINTS</br>  
+							&emsp;&emsp;The creativity of the video.</br>
+							&emsp;&emsp;Voice adjustment and control according to the character.</br>
+							&emsp;&emsp;Flow in video and dialogues.</br>
+							&emsp;&emsp;The meaning and harmony of the dialogues in the video will be considered.</li>
+						<li>Final design should be uploaded as single zip (.rar) file.</li>
+						<li>Before uploading you need to register through our website <a href="https://ruusara.github.io/ruusara/">(https://ruusara.github.io/ruusara/)</a> and get a registration number. There you will be notified via e-mail.</li>
+						<li>The zip file should be re-registered with the registration number.</li>
+						<li>Only this file should be uploaded through the Google forum provided on the website. </li> 
+
 						</p>
                     </div>
                 </div>
@@ -128,7 +115,7 @@
 	<div class="container-fluid has-bg-overlay text-center text-light has-height-lg middle-items" id="book-table">
         <div class="">
             <h2 class="section-title mb-5">UPLOAUD YOUR FILE</h2>
-            <a href="https://forms.gle/DAHDQkRpsyEmDgAm8" class="btn btn-lg btn-primary" id="rounded-btn">Upload <i class = "ti-upload"></i></a>
+            <a href="https://forms.gle/fZN97nDpnXTURfNn7" class="btn btn-lg btn-primary" id="rounded-btn">Upload <i class = "ti-upload"></i></a>
         </div>
     </div>
 	<div id="event" class="container-fluid bg-dark text-light py-5 text-center wow fadeIn">
@@ -172,12 +159,12 @@
                 <div id="" style="width: 100%; height: 100%; min-height: 400px"><p></br></p><p></br></p><p></br></p><img src = "assets/imgs/logo2.png" style="width:280px"></div>
             </div>
             <div class="col-md-6 px-5 has-height-lg middle-items">
-                <h3>සාහිත්‍ය අනුකමිටුව</h3>
-                <p>"මාගේ දේශය අවදි කරනු මැන" ශිෂ්‍ය සාහිත්‍ය උළෙල - 2022 </br> මහා ශිෂ්‍ය සංගමය, සාහිත්‍ය අනුකමිටුව, පේරාදෙනිය විද්‍යාලය</p>
+                <h3>Literary Subcommittee of University of Peradeniya</h3>
+                <p>“Let my country be awake”, The Students’ Festival of Literature - 2022 </br> Peradeniya Students’ Union, Literary Subcommittee of University of Peradeniya, University of Peradeniya</p>
                 <div class="text-muted">
                     <p><span class="ti-facebook pr-3"></span><a href = "https://www.facebook.com/MageDeshayaAwadiKaranuMena/" style = "color:#adb5bd">MageDeshayaAwadiKaranuMena</a></p>
-                    <p><span class="ti-support pr-3"></span> (94)70 136 7886 (කලිදු ) </p>
-					<p><span class="ti-support pr-3"></span> (94)76 666 5859 (ශානුක ) </p>
+                    <p><span class="ti-support pr-3"></span> (94)70 136 7886 (Kalindu) </p>
+					<p><span class="ti-support pr-3"></span> (94)76 666 5859 (Shanuka) </p>
                     <p><span class="ti-email pr-3"></span>e19ruusara@gmail.com</p>
                 </div>
             </div>
