--- a/photomanipulation.html
+++ b/photomanipulation.html
@@ -63,12 +63,12 @@
         </div>
     </nav>
     <!-- header -->
-    <header id="home" class="header">
+    <header id="home" class="header photom">
         <div class="overlay text-white text-center">
             <h1 class="display-2 font-weight-bold my-3">"රූසර ඩිජිටල් නිර්මාණ තරගාවලිය"</h1>
             <h3 class="display-4 mb-5">ඡායාරූප සැකසීමේ තරගාවලිය </h3>
 			<h2 class="display-4 mb-5">2022</h2>
-            <a class="btn btn-lg btn-primary" href="https://forms.gle/DAHDQkRpsyEmDgAm8">Upload Here</a>
+            <a class="btn btn-lg btn-primary" href="https://forms.gle/DAHDQkRpsyEmDgAm8">Upload Here <i class = "ti-upload"></i></a>
         </div>
     </header>
 
@@ -128,7 +128,7 @@
 	<div class="container-fluid has-bg-overlay text-center text-light has-height-lg middle-items" id="book-table">
         <div class="">
             <h2 class="section-title mb-5">UPLOAUD YOUR FILE</h2>
-            <a href="https://forms.gle/DAHDQkRpsyEmDgAm8" class="btn btn-lg btn-primary" id="rounded-btn">Upload</a>
+            <a href="https://forms.gle/DAHDQkRpsyEmDgAm8" class="btn btn-lg btn-primary" id="rounded-btn">Upload <i class = "ti-upload"></i></a>
         </div>
     </div>
 	<div id="event" class="container-fluid bg-dark text-light py-5 text-center wow fadeIn">
@@ -169,14 +169,15 @@
     <div id="contact" class="container-fluid bg-dark text-light border-top wow fadeIn">
         <div class="row">
             <div class="col-md-6 px-0">
-                <div id="" style="width: 100%; height: 100%; min-height: 400px"><p></br></p><p></br></p><p></br></p><img src = "assets/imgs/logo2.jpg" style="width:280px"></div>
+                <div id="" style="width: 100%; height: 100%; min-height: 400px"><p></br></p><p></br></p><p></br></p><img src = "assets/imgs/logo2.png" style="width:280px"></div>
             </div>
             <div class="col-md-6 px-5 has-height-lg middle-items">
                 <h3>සාහිත්‍ය අනුකමිටුව</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, laboriosam doloremque odio delectus, sunt magnam laborum impedit molestiae, magni quae ipsum, ullam eos! Alias suscipit impedit et, adipisci illo quam.</p>
+                <p>"මාගේ දේශය අවදි කරනු මැන" ශිෂ්‍ය සාහිත්‍ය උළෙල - 2022 </br> මහා ශිෂ්‍ය සංගමය, සාහිත්‍ය අනුකමිටුව, පේරාදෙනිය විද්‍යාලය</p>
                 <div class="text-muted">
-                    <p><span class="ti-location-pin pr-3"></span> 12345 Fake ST NoWhere, AB Country</p>
-                    <p><span class="ti-support pr-3"></span> (94)70 136 7886</p>
+                    <p><span class="ti-facebook pr-3"></span><a href = "https://www.facebook.com/MageDeshayaAwadiKaranuMena/" style = "color:#adb5bd">MageDeshayaAwadiKaranuMena</a></p>
+                    <p><span class="ti-support pr-3"></span> (94)70 136 7886 (කලිදු ) </p>
+					<p><span class="ti-support pr-3"></span> (94)76 666 5859 (ශානුක ) </p>
                     <p><span class="ti-email pr-3"></span>e19ruusara@gmail.com</p>
                 </div>
             </div>
@@ -188,16 +189,16 @@
         <div class="row">
             <div class="col-sm-4">
                 <h3>EMAIL US</h3>
-                <P class="text-muted">e19ruusara@gmail.com</P>
+                <P class="text-muted"><i class = "ti-email"> e19ruusara@gmail.com</i></P>
             </div>
             <div class="col-sm-4">
                 <h3>CALL US</h3>
-                <P class="text-muted">(94)70 136 7886</P>
-				<P class="text-muted">(94)76 666 5859</P>
+                <P class="text-muted"><i class = "ti-support"> (94)70 136 7886</i></P>
+				<P class="text-muted"><i class = "ti-support"> (94)76 666 5859</i></P>
             </div>
             <div class="col-sm-4">
                 <h3>FIND US</h3>
-                <P class="text-muted">12345 Fake ST NoWhere AB Country</P>
+                <P class="text-muted"><i class = "ti-facebook"><a href = "https://www.facebook.com/MageDeshayaAwadiKaranuMena/" style = "color:#adb5bd">MageDeshayaAwadiKaranuMena</a></i></P>
             </div>
         </div>
     </div>
