--- a/comiccharactereng.html
+++ b/comiccharactereng.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="Devcrud">
-    <title>හඬ කැවීමේ තරගාවලිය</title>
+    <title>Comic Character Creation Competition</title>
    
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
@@ -24,19 +24,19 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link" href="indexeng.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">About</a>
+                    <a class="nav-link" href="indexeng.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Gallary</a>
+                    <a class="nav-link" href="indexeng.html">Gallary</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Social Media</a>
+                    <a class="nav-link" href="indexeng.html">Social Media</a>
                 </li>
 				<li class="nav-item">
-                    <a class="nav-link" href="index.html">Event</a>
+                    <a class="nav-link" href="indexeng.html">Event</a>
                 </li>
 				<li class="nav-item">
                     <a class="nav-link" href="#contact">Contact </a> <!--<span class="sr-only"></span></a>-->
@@ -48,27 +48,27 @@
             </a>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#home">හඬ කැවීම <span class="sr-only"></span></a>
+                    <a class="nav-link" href="dubbingeng.html">Dubbing<span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="photomanipulation.html">ඡායාරූප සැකසීම</a>
+                    <a class="nav-link" href="photomanipulationeng.html">Photo Manip.. </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="comiccharacter.html">ඩිජිටල් චරිත සිතුවම් </a>
+                    <a class="nav-link" href="#home">Comic Character </a>
                 </li>
                 <li class="nav-item">
-                    <a href="https://forms.gle/DAHDQkRpsyEmDgAm8" class="btn btn-primary ml-xl-4">Upload</a>
+                    <a href="https://forms.gle/fZN97nDpnXTURfNn7" class="btn btn-primary ml-xl-4">Upload</a>
                 </li>
             </ul>
         </div>
     </nav>
     <!-- header -->
-    <header id="home" class="header dubbing">
+    <header id="home" class="header comic">
         <div class="overlay text-white text-center">
-            <h1 class="display-2 font-weight-bold my-3">"රූසර ඩිජිටල් නිර්මාණ තරගාවලිය"</h1>
-            <h3 class="display-4 mb-5">හඬ කැවීමේ තරගාවලිය </h3>
+            <h1 class="display-2 font-weight-bold my-3">"රූසර-2022, The Digital Art Competition"</h1>
+            <h3 class="display-4 mb-5">Comic Character Creation Competition </h3>
 			<h2 class="display-4 mb-5">2022</h2>
-            <a class="btn btn-lg btn-primary" href="https://forms.gle/DAHDQkRpsyEmDgAm8">Upload Here <i class = "ti-upload"></i></a>
+            <a class="btn btn-lg btn-primary" href="https://forms.gle/fZN97nDpnXTURfNn7">Upload Here <i class = "ti-upload"></i></a>
         </div>
     </header>
 
@@ -79,45 +79,26 @@
             <div class="col-lg-6">
                 <div class="row justify-content-center">
                     <div class="col-sm-8 py-5 my-5">
-                        <h3 class="mb-4">තරග නීති  සහ රෙගුලාසි</h3>
-                        <p><b>තරගයට සහබාගී වන සියළු තරගකරුවන් තරග නීති රීති සියල්ල හොදින් කියවා අවබෝධ කරගත යුතුය.</p></b>
-						<p>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
+                        <h3 class="mb-4" style="text-align:center">COMPETITION TERMS AND CONDITIONS</h3>
+                        <p style="text-align:justify"><b>COMPETITORS SHOULD READ AND FULLY UNDERSTAND THE RULES AND REGULATIONS THOROUGHLY</p></b>
+						<p style="text-align:justify">
+						<li>All participants of the competition should register before the due date and designs that have been submitted without such registration and designs submitted after the last date given will not be accepted.</li>
+						<li>Contestant is eligible to submit only one design.</li>
+						<li>It is compulsory submit a full figure drawing of the comic character in your design.</li>
+						<li>The relevant character should have an identity. A name and a small description of the character is needed.</li>
+						<li>If there's a background design, it should be designed so as not to interfere with the portrayal of the character.</li>
+						<li>Here, we do not impose any restrictions on the software you use to create your work, and you are free to work with any software.</li>
+						<li>You can submit your designs in JPEG or PNG format. Design resolution should be greater than 960px, 1280px and it should be less than 20MB in size.</li>
+						<li>You should be able to provide the source file of your design, or the screenshot taken during your creation if they are needed in any case.</li>
+						<li>The design you submitted must be of your own and if it is found to be traced, or if it is found to be another person's design, it will be excluded from the competition.</li>
+						<li>Any creation that is harmful to politics come on religiosity and society will not be accepted and will be removed from the competition.</li>
+						<li>All designs submitted must not contain any kind of logo, copyright marks, or are other markings other than the identity of the character (name and description are allowed within the design).</li>
+						<li>The competition consists of two categories as the most creative and the most popular design. and all the designs are included in those two categories.</li>
+						<li>The most creative design is chosen by the jury and the most popular design is selected by Facebook likes.</li>
+						<li>The final decision will be made by the jury.</li>
+						<li>All the above files should be uploaded as a single zip (.rar) file, clearly stating your design as a single file as JPEG or PNG, and a short description of the design (character name and description of the character)</li> as a PDF.
+						<li>You must register and obtain a registration number through our website. <a href="https://ruusara.github.io/ruusara/">(https://ruusara.github.io/ruusara/)</a> before uploading. There you will be notified via e-mail.</li>
+
 						</p>
                     </div>
                 </div>
@@ -128,7 +109,7 @@
 	<div class="container-fluid has-bg-overlay text-center text-light has-height-lg middle-items" id="book-table">
         <div class="">
             <h2 class="section-title mb-5">UPLOAUD YOUR FILE</h2>
-            <a href="https://forms.gle/DAHDQkRpsyEmDgAm8" class="btn btn-lg btn-primary" id="rounded-btn">Upload <i class = "ti-upload"></i></a>
+            <a href="https://forms.gle/fZN97nDpnXTURfNn7" class="btn btn-lg btn-primary" id="rounded-btn">Upload <i class = "ti-upload"></i></a>
         </div>
     </div>
 	<div id="event" class="container-fluid bg-dark text-light py-5 text-center wow fadeIn">
@@ -172,12 +153,12 @@
                 <div id="" style="width: 100%; height: 100%; min-height: 400px"><p></br></p><p></br></p><p></br></p><img src = "assets/imgs/logo2.png" style="width:280px"></div>
             </div>
             <div class="col-md-6 px-5 has-height-lg middle-items">
-                <h3>සාහිත්‍ය අනුකමිටුව</h3>
-                <p>"මාගේ දේශය අවදි කරනු මැන" ශිෂ්‍ය සාහිත්‍ය උළෙල - 2022 </br> මහා ශිෂ්‍ය සංගමය, සාහිත්‍ය අනුකමිටුව, පේරාදෙනිය විද්‍යාලය</p>
+                <h3>Literary Subcommittee of University of Peradeniya</h3>
+                <p>“Let my country be awake”, The Students’ Festival of Literature - 2022 </br> Peradeniya Students’ Union, Literary Subcommittee of University of Peradeniya, University of Peradeniya</p>
                 <div class="text-muted">
                     <p><span class="ti-facebook pr-3"></span><a href = "https://www.facebook.com/MageDeshayaAwadiKaranuMena/" style = "color:#adb5bd">MageDeshayaAwadiKaranuMena</a></p>
-                    <p><span class="ti-support pr-3"></span> (94)70 136 7886 (කලිදු ) </p>
-					<p><span class="ti-support pr-3"></span> (94)76 666 5859 (ශානුක ) </p>
+                    <p><span class="ti-support pr-3"></span> (94)70 136 7886 (Kalindu) </p>
+					<p><span class="ti-support pr-3"></span> (94)76 666 5859 (Shanuka) </p>
                     <p><span class="ti-email pr-3"></span>e19ruusara@gmail.com</p>
                 </div>
             </div>
