--- a/gallary.html
+++ b/gallary.html
@@ -68,14 +68,14 @@
             <h1 class="display-2 font-weight-bold my-3">"මාගේ දේශය අවදි කරනු මැන"</h1>
             <h3 class="display-4 mb-5">ශිෂ්‍ය සාහිත්‍යය උළෙල</h3>
 			<h2 class="display-4 mb-5">2022</h2>
-            <a class="btn btn-lg btn-primary" href="#gallary">View Our gallary</a>
+            <a class="btn btn-lg btn-primary" href="#gallary">View Our gallary <i class="ti-location-arrow"></i></a>
         </div>
     </header>
 
 
     <!--  gallary Section  -->
     <div id="gallary" class="text-center bg-dark text-light has-height-md middle-items wow fadeIn">
-        <h2 class="section-title">GALLARY</h2>
+        <h2 class="section-title">රූසර '21</h2>
     </div>
     <div class="gallary row">
         <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
@@ -252,14 +252,15 @@
     <div id="contact" class="container-fluid bg-dark text-light border-top wow fadeIn">
         <div class="row">
             <div class="col-md-6 px-0">
-                <div id="" style="width: 100%; height: 100%; min-height: 400px"><p></br></p><p></br></p><p></br></p><img src = "assets/imgs/logo2.jpg" style="width:280px"></div>
+                <div id="" style="width: 100%; height: 100%; min-height: 400px"><p></br></p><p></br></p><p></br></p><img src = "assets/imgs/logo2.png" style="width:280px"></div>
             </div>
             <div class="col-md-6 px-5 has-height-lg middle-items">
                 <h3>සාහිත්‍ය අනුකමිටුව</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, laboriosam doloremque odio delectus, sunt magnam laborum impedit molestiae, magni quae ipsum, ullam eos! Alias suscipit impedit et, adipisci illo quam.</p>
+                <p>"මාගේ දේශය අවදි කරනු මැන" ශිෂ්‍ය සාහිත්‍ය උළෙල - 2022 </br> මහා ශිෂ්‍ය සංගමය, සාහිත්‍ය අනුකමිටුව, පේරාදෙනිය විද්‍යාලය</p>
                 <div class="text-muted">
-                    <p><span class="ti-location-pin pr-3"></span> 12345 Fake ST NoWhere, AB Country</p>
-                    <p><span class="ti-support pr-3"></span> (94)70 136 7886</p>
+                    <p><span class="ti-facebook pr-3"></span><a href = "https://www.facebook.com/MageDeshayaAwadiKaranuMena/" style = "color:#adb5bd">MageDeshayaAwadiKaranuMena</a></p>
+                    <p><span class="ti-support pr-3"></span> (94)70 136 7886 (කලිදු ) </p>
+					<p><span class="ti-support pr-3"></span> (94)76 666 5859 (ශානුක ) </p>
                     <p><span class="ti-email pr-3"></span>e19ruusara@gmail.com</p>
                 </div>
             </div>
@@ -271,16 +272,16 @@
         <div class="row">
             <div class="col-sm-4">
                 <h3>EMAIL US</h3>
-                <P class="text-muted">e19ruusara@gmail.com</P>
+                <P class="text-muted"><i class = "ti-email"> e19ruusara@gmail.com</i></P>
             </div>
             <div class="col-sm-4">
                 <h3>CALL US</h3>
-                <P class="text-muted">(94)70 136 7886</P>
-				<P class="text-muted">(94)76 666 5859</P>
+                <P class="text-muted"><i class = "ti-support"> (94)70 136 7886</i></P>
+				<P class="text-muted"><i class = "ti-support"> (94)76 666 5859</i></P>
             </div>
             <div class="col-sm-4">
                 <h3>FIND US</h3>
-                <P class="text-muted">12345 Fake ST NoWhere AB Country</P>
+                <P class="text-muted"><i class = "ti-facebook"><a href = "https://www.facebook.com/MageDeshayaAwadiKaranuMena/" style = "color:#adb5bd">MageDeshayaAwadiKaranuMena</a></i></P>
             </div>
         </div>
     </div>
