--- a/photomanipulationeng.html
+++ b/photomanipulationeng.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="Devcrud">
-    <title>හඬ කැවීමේ තරගාවලිය</title>
+    <title>Photo Manipulation Competition</title>
    
     <!-- font icons -->
     <link rel="stylesheet" href="assets/vendors/themify-icons/css/themify-icons.css">
@@ -24,19 +24,19 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Home</a>
+                    <a class="nav-link" href="indexeng.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">About</a>
+                    <a class="nav-link" href="indexeng.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Gallary</a>
+                    <a class="nav-link" href="indexeng.html">Gallary</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="index.html">Social Media</a>
+                    <a class="nav-link" href="indexeng.html">Social Media</a>
                 </li>
 				<li class="nav-item">
-                    <a class="nav-link" href="index.html">Event</a>
+                    <a class="nav-link" href="indexeng.html">Event</a>
                 </li>
 				<li class="nav-item">
                     <a class="nav-link" href="#contact">Contact </a> <!--<span class="sr-only"></span></a>-->
@@ -48,27 +48,27 @@
             </a>
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#home">හඬ කැවීම <span class="sr-only"></span></a>
+                    <a class="nav-link" href="dubbingeng.html">Dubbing <span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="photomanipulation.html">ඡායාරූප සැකසීම</a>
+                    <a class="nav-link" href="#home">Photo Manip.. </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="comiccharacter.html">ඩිජිටල් චරිත සිතුවම් </a>
+                    <a class="nav-link" href="comiccharactereng.html">Comic Character </a>
                 </li>
                 <li class="nav-item">
-                    <a href="https://forms.gle/DAHDQkRpsyEmDgAm8" class="btn btn-primary ml-xl-4">Upload</a>
+                    <a href="https://forms.gle/fZN97nDpnXTURfNn7" class="btn btn-primary ml-xl-4">Upload</a>
                 </li>
             </ul>
         </div>
     </nav>
     <!-- header -->
-    <header id="home" class="header dubbing">
+    <header id="home" class="header photom">
         <div class="overlay text-white text-center">
-            <h1 class="display-2 font-weight-bold my-3">"රූසර ඩිජිටල් නිර්මාණ තරගාවලිය"</h1>
-            <h3 class="display-4 mb-5">හඬ කැවීමේ තරගාවලිය </h3>
+            <h1 class="display-2 font-weight-bold my-3">"රූසර-2022, The Digital Art Competition"</h1>
+            <h3 class="display-4 mb-5">Photo Manipulation Competition </h3>
 			<h2 class="display-4 mb-5">2022</h2>
-            <a class="btn btn-lg btn-primary" href="https://forms.gle/DAHDQkRpsyEmDgAm8">Upload Here <i class = "ti-upload"></i></a>
+            <a class="btn btn-lg btn-primary" href="https://forms.gle/fZN97nDpnXTURfNn7">Upload Here <i class = "ti-upload"></i></a>
         </div>
     </header>
 
@@ -79,45 +79,28 @@
             <div class="col-lg-6">
                 <div class="row justify-content-center">
                     <div class="col-sm-8 py-5 my-5">
-                        <h3 class="mb-4">තරග නීති  සහ රෙගුලාසි</h3>
-                        <p><b>තරගයට සහබාගී වන සියළු තරගකරුවන් තරග නීති රීති සියල්ල හොදින් කියවා අවබෝධ කරගත යුතුය.</p></b>
-						<p>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
-						<li>තරගකරුවන් තම නිර්මාණ නියමිත දිනට</li>
-						<li>ළුක් කණ්ඩායමකට ඉදිරිපත්</li>
+                        <h3 class="mb-4" style="text-align:center">COMPETITION TERMS AND CONDITIONS</h3>
+                        <p style="text-align:justify"><b>COMPETITORS SHOULD READ AND FULLY UNDERSTAND THE RULES AND REGULATIONS THOROUGHLY.</p></b>
+						<p style="text-align:justify">
+						<li>Competitors should present their design through an online platform before the deadline.</li>
+						<li>Each competitor is allowed to submit only one design.</li>
+						<li>The initial pictures related to the design should be presented.</li>
+						<li>Responsibility regarding intellectual property rights of the initial pictures is with the designer.</li>
+						<li>The maximum number of allowed initial pictures are 8.</li>
+						<li>The design can be presented in the forms of JPEG or PNG.</li>
+						<li>Designer has the freedom of creating design that provides useful information to the public.</li>
+						<li>Designs that include political agendas or designs related to racism are NOT tolerated and will be rejected from the competition.</li>
+						<li>The idea of the design should be given using a paragraph with less than 60 words and should be submitted as a PDF file.</li>
+						<li>The initial pictures, final design and the PDF containing the idea, should be separately placed inside files and the above-mentioned files should be uploaded as a single archive zip (.rar) file.</li>
+						<li>In the designs, there should not be any kind of logos, copyright marks, identifying marks, borders or any other marks.</li>
+						<li>If needed there should be the possibility of uploading it to the PSD file.</li>
+						<li>The competition is mainly in the forms of “The most attractive” and “The most popular”, and all the designs are considered under these two categories.</li>
+						<li>The most creative design will be selected by the judges and the most popular design will be selected using the amount of Facebook likes.</li>
+						<li>Decision of the judges will be the last decision.</li>
+						<li>Before uploading the design, contestant should register using the official website and obtain registration number information may be provided through the e-mail.</li>
+						<li>The archive (.zip) file should be renamed with the registration number.</li>
+						<li>You must register and obtain a registration number through our website. <a href="https://ruusara.github.io/ruusara/">(https://ruusara.github.io/ruusara/)</a> before uploading. There you will be notified via e-mail.</li>
+
 						</p>
                     </div>
                 </div>
@@ -128,7 +111,7 @@
 	<div class="container-fluid has-bg-overlay text-center text-light has-height-lg middle-items" id="book-table">
         <div class="">
             <h2 class="section-title mb-5">UPLOAUD YOUR FILE</h2>
-            <a href="https://forms.gle/DAHDQkRpsyEmDgAm8" class="btn btn-lg btn-primary" id="rounded-btn">Upload <i class = "ti-upload"></i></a>
+            <a href="https://forms.gle/fZN97nDpnXTURfNn7" class="btn btn-lg btn-primary" id="rounded-btn">Upload <i class = "ti-upload"></i></a>
         </div>
     </div>
 	<div id="event" class="container-fluid bg-dark text-light py-5 text-center wow fadeIn">
@@ -172,12 +155,12 @@
                 <div id="" style="width: 100%; height: 100%; min-height: 400px"><p></br></p><p></br></p><p></br></p><img src = "assets/imgs/logo2.png" style="width:280px"></div>
             </div>
             <div class="col-md-6 px-5 has-height-lg middle-items">
-                <h3>සාහිත්‍ය අනුකමිටුව</h3>
-                <p>"මාගේ දේශය අවදි කරනු මැන" ශිෂ්‍ය සාහිත්‍ය උළෙල - 2022 </br> මහා ශිෂ්‍ය සංගමය, සාහිත්‍ය අනුකමිටුව, පේරාදෙනිය විද්‍යාලය</p>
+                <h3>Literary Subcommittee of University of Peradeniya</h3>
+                <p>“Let my country be awake”, The Students’ Festival of Literature - 2022 </br> Peradeniya Students’ Union, Literary Subcommittee of University of Peradeniya, University of Peradeniya</p>
                 <div class="text-muted">
                     <p><span class="ti-facebook pr-3"></span><a href = "https://www.facebook.com/MageDeshayaAwadiKaranuMena/" style = "color:#adb5bd">MageDeshayaAwadiKaranuMena</a></p>
-                    <p><span class="ti-support pr-3"></span> (94)70 136 7886 (කලිදු ) </p>
-					<p><span class="ti-support pr-3"></span> (94)76 666 5859 (ශානුක ) </p>
+                    <p><span class="ti-support pr-3"></span> (94)70 136 7886 (Kalindu) </p>
+					<p><span class="ti-support pr-3"></span> (94)76 666 5859 (Shanuka) </p>
                     <p><span class="ti-email pr-3"></span>e19ruusara@gmail.com</p>
                 </div>
             </div>
