--- a/(root)/index.html
+++ b/(root)/index.html
@@ -68,265 +68,24 @@
             <h1 class="display-2 font-weight-bold my-3">"මාගේ දේශය අවදි කරනු මැන"</h1>
             <h3 class="display-4 mb-5">ශිෂ්‍ය සාහිත්‍යය උළෙල</h3>
 			<h2 class="display-4 mb-5">2022</h2>
-            <a class="btn btn-lg btn-primary" href="gallary.html">View Our gallary</a>
+            <p><a class="btn btn-lg btn-primary" href="indexeng.html">English <i class="ti-location-arrow"></i></a>&emsp;&emsp;<a class="btn btn-lg btn-primary" href="index.html">සිංහල <i class="ti-location-arrow"></i></a></p>
         </div>
     </header>
 
-    <!--  About Section  -->
-    <div id="about" class="container-fluid wow fadeIn" id="about"data-wow-duration="1.5s">
-        <div class="row">
-            <div class="col-lg-6 has-img-bg"></div>
-            <div class="col-lg-6">
-                <div class="row justify-content-center">
-                    <div class="col-sm-8 py-5 my-5">
-                        <h3 class="mb-4">හැදින්වීම</h3>
-                        <p><b><i>"මාගේ දේශය අවදි කරනු මැන"</b></i> ශිෂ්‍ය සාහිත්‍ය උළෙලට සමගාමීව, පේරාදෙනිය විශ්ව විද්‍යාලීය ඉංජිනේරු පීඨය විසින්  <b><i>"රූසර ඩිජිටල් නිර්මාණ තරගාවලිය"</b></i> දෙවන වරට සංවිධානය කරනු ලබයි. මෙම තරගාවලිය <b><i>හඬ කැවීම්, ඡායාරූප සැකසීම්, ඩිජිටල් චරිත සිතුවම් නිර්මාණය</b></i> යන ප්‍රධාන තරග අංශ යටතේ පැවැත්වේ. </p>
-                        <h3 class="mb-4">කාල සීමාව</h3>
-						<p><b>2022 ජූලි මස</b> සිට <b>2022 අගෝසතු මස</b> දක්වා </p>
-						<h3 class="mb-4">අරමුණු</h3>
-                        <p>
-						<li>ඩිජිටල් කලාව පිළිබද තාක්ෂණික හා</li>
-						<li>නිර්මාණශීලීත්වය</li>
-						<li>ඩිජිටල් කලාව </li>
-						<li>නොයෙක් වර්ගයේ</li>
-						</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!--  gallary Section  -->
-    <div id="gallary" class="text-center bg-dark text-light has-height-md middle-items wow fadeIn">
-        <h2 class="section-title">GALLARY</h2>
-    </div>
-    <div class="gallary row">
-        <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
-            <img src="assets/imgs/gallary-1.jpg" class="gallary-img">
-            <a href="assets/imgs/gallary-1.jpg" class="gallary-overlay">
-                <i class="gallary-icon "></i> <!--ti-plus-->
-            </a>
-        </div>
-        <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
-            <img src="assets/imgs/gallary-5.jpg" class="gallary-img">
-            <a href="assets/imgs/gallary-5.jpg" class="gallary-overlay">
-                <i class="gallary-icon "></i>
-            </a>
-        </div>
-        <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
-            <img src="assets/imgs/gallary-11.jpg" class="gallary-img">
-            <a href="assets/imgs/gallary-11.jpg" class="gallary-overlay">
-                <i class="gallary-icon "></i>
-            </a>
-        </div>
-        <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
-            <img src="assets/imgs/gallary-15.jpg" class="gallary-img">
-            <a href="assets/imgs/gallary-15.jpg" class="gallary-overlay">
-                <i class="gallary-icon "></i>
-            </a>
-        </div>
-        <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
-            <img src="assets/imgs/gallary-19.jpg" class="gallary-img">
-            <a href="assets/imgs/gallary-19.jpg" class="gallary-overlay">
-                <i class="gallary-icon "></i>
-            </a>
-        </div>
-        <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
-            <img src="assets/imgs/gallary-22.jpg" class="gallary-img">
-            <a href="assets/imgs/gallary-22.jpg" class="gallary-overlay">
-                <i class="gallary-icon "></i>
-            </a>
-        </div>
-        <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
-            <img src="assets/imgs/gallary-7.jpg" class="gallary-img">
-            <a href="assets/imgs/gallary-7.jpg" class="gallary-overlay">
-                <i class="gallary-icon "></i>
-            </a>
-        </div>
-        <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
-            <img src="assets/imgs/gallary-24.jpg" class="gallary-img">
-            <a href="gallary.html" class="gallary-overlay">
-                <i class="gallary-icon ti-plus"></i>
-            </a>
-        </div>
-        
-    </div>
-
-    <!-- book a table Section  -->
-    <div class="container-fluid has-bg-overlay text-center text-light has-height-lg middle-items" id="social">
-        <div class="">
-			<p></br></p>
-            <h2 class="section-title mb-5">SOCIAL MEDIA</h2>
-            <div class="row mb-5">
-			<div class = "gallary row">
-				<div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
-					<img src="assets/imgs/scocial-1.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
-					<a href="#" class="gallary-overlay">
-						<i class="gallary-icon "></i>
-					</a>
-				</div>
-				<div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
-					<img src="assets/imgs/scocial-1.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
-					<a href="#" class="gallary-overlay">
-						<i class="gallary-icon "></i>
-					</a>
-				</div>
-				<div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
-					<img src="assets/imgs/scocial-1.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
-					<a href="#" class="gallary-overlay">
-						<i class="gallary-icon "></i>
-					</a>
-				</div>
-				<div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
-					<img src="assets/imgs/scocial-1.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
-					<a href="#" class="gallary-overlay">
-						<i class="gallary-icon "></i>
-					</a>
-				</div>
-				<div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
-					<img src="assets/imgs/scocial-1.jpg" alt="template by DevCRID http://www.devcrud.com/" class="gallary-img">
-					<a href="#" class="gallary-overlay">
-						<i class="gallary-icon "></i>
-					</a>
-				</div>
-			</div>
-        </div>
-    </div>
-
-    <!-- BLOG Section  -->
-    <div id="event" class="container-fluid bg-dark text-light py-5 text-center wow fadeIn">
-        <h2 class="section-title py-5">EVENTS</h2>
-        <div class="row justify-content-center">
-            <div class="col-sm-7 col-md-4 mb-5">
-                <ul class="nav nav-pills nav-justified mb-3" id="pills-tab" role="tablist">
-                    <!--
-					<li class="nav-item">
-                        <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#foods" role="tab" aria-controls="pills-home" aria-selected="true">Foods</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#juices" role="tab" aria-controls="pills-profile" aria-selected="false">Juices</a>
-                    </li>-->
-                </ul>
-            </div>
-        </div>
-        <div class="tab-content" id="pills-tabContent">
-            <div class="tab-pane fade show active" id="foods" role="tabpanel" aria-labelledby="pills-home-tab">
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="card bg-transparent border my-3 my-md-0">
-                            <img src="assets/imgs/gallary-13.jpg" alt="template by DevCRID http://www.devcrud.com/" class="rounded-0 card-img-top mg-responsive">
-                            <div class="card-body">
-                                <h4 class="pt20 pb20">හඬ කැවීමේ තරගාවලිය </h4>
-                                <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa provident illum officiis fugit laudantium voluptatem sit iste delectus qui ex. </p>
-								<h1 class="text-center mb-4"><a href="dubbing.html" class="badge badge-primary">See More..</a></h1>
-							</div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card bg-transparent border my-3 my-md-0">
-                            <img src="assets/imgs/blog-3.jpg" alt="template by DevCRID http://www.devcrud.com/" class="rounded-0 card-img-top mg-responsive">
-                            <div class="card-body">
-                                <h4 class="pt20 pb20">ඡායාරූප සැකසීම් තරගාවලිය</h4>
-                                <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa provident illum officiis fugit laudantium voluptatem sit iste delectus qui ex. </p>
-								<h1 class="text-center mb-4"><a href="photomanipulation.html" class="badge badge-primary">See More..</a></h1>
-							</div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card bg-transparent border my-3 my-md-0">
-                            <img src="assets/imgs/gallary-12.jpg" alt="template by DevCRID http://www.devcrud.com/" class="rounded-0 card-img-top mg-responsive">
-                            <div class="card-body">
-                                <h4 class="pt20 pb20">ඩිජිටල් චරිත සිතුවම් නිර්මාණ තරගාවලිය</h4>
-                                <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa provident illum officiis fugit laudantium voluptatem sit iste delectus qui ex. </p>
-								<h1 class="text-center mb-4"><a href="comiccharacter.html" class="badge badge-primary">See More..</a></h1>
-							</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="tab-pane fade" id="juices" role="tabpanel" aria-labelledby="pills-profile-tab">
-                <div class="row">
-                    <div class="col-md-4 my-3 my-md-0">
-                        <div class="card bg-transparent border">
-                            <img src="assets/imgs/blog-4.jpg" alt="template by DevCRID http://www.devcrud.com/" class="rounded-0 card-img-top mg-responsive">
-                            <div class="card-body">
-                                <h1 class="text-center mb-4"><a href="#" class="badge badge-primary">$15</a></h1>
-                                <h4 class="pt20 pb20">Consectetur Adipisicing Elit</h4>
-                                <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa provident illum officiis fugit laudantium voluptatem sit iste delectus qui ex. </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 my-3 my-md-0">
-                        <div class="card bg-transparent border">
-                            <img src="assets/imgs/blog-5.jpg" alt="template by DevCRID http://www.devcrud.com/" class="rounded-0 card-img-top mg-responsive">
-                            <div class="card-body">
-                                <h1 class="text-center mb-4"><a href="#" class="badge badge-primary">$29</a></h1>
-                                <h4 class="pt20 pb20">Ullam Laboriosam</h4>
-                                <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa provident illum officiis fugit laudantium voluptatem sit iste delectus qui ex. </p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4 my-3 my-md-0">
-                        <div class="card bg-transparent border">
-                            <img src="assets/imgs/blog-6.jpg" alt="template by DevCRID http://www.devcrud.com/" class="rounded-0 card-img-top mg-responsive">
-                            <div class="card-body">
-                                <h1 class="text-center mb-4"><a href="#" class="badge badge-primary">$3</a></h1>
-                                <h4 class="pt20 pb20">Fugit Ipsam</h4>
-                                <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa provident illum officiis fugit laudantium voluptatem sit iste delectus qui ex. </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- REVIEWS Section  -->
-    <div id="testmonial" class="container-fluid wow fadeIn bg-dark text-light has-height-lg middle-items">
-        <h2 class="section-title my-5 text-center">JUDGE PANEL</h2>
-        <div class="row mt-3 mb-5">
-            <div class="col-md-4 my-3 my-md-0">
-                <div class="testmonial-card">
-                    <h3 class="testmonial-title">John Doe</h3>
-                    <h6 class="testmonial-subtitle">Web Designer</h6>
-                    <div class="testmonial-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum nobis eligendi, quaerat accusamus ipsum sequi dignissimos consequuntur blanditiis natus. Aperiam!</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 my-3 my-md-0">
-                <div class="testmonial-card">
-                    <h3 class="testmonial-title">Steve Thomas</h3>
-                    <h6 class="testmonial-subtitle">UX/UI Designer</h6>
-                    <div class="testmonial-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laborum minus obcaecati cum eligendi perferendis magni dolorum ipsum magnam, sunt reiciendis natus. Aperiam!</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 my-3 my-md-0">
-                <div class="testmonial-card">
-                    <h3 class="testmonial-title">Miranda Joy</h3>
-                    <h6 class="testmonial-subtitle">Graphic Designer</h6>
-                    <div class="testmonial-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, nam. Earum nobis eligendi, dignissimos consequuntur blanditiis natus. Aperiam!</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
+    
     <!-- CONTACT Section  -->
     <div id="contact" class="container-fluid bg-dark text-light border-top wow fadeIn">
         <div class="row">
             <div class="col-md-6 px-0">
-                <div id="" style="width: 100%; height: 100%; min-height: 400px"><p></br></p><p></br></p><p></br></p><img src = "assets/imgs/logo2.jpg" style="width:280px"></div>
+                <div id="" style="width: 100%; height: 100%; min-height: 400px"><p></br></p><p></br></p><p></br></p><img src = "assets/imgs/logo2.png" style="width:280px"></div>
             </div>
             <div class="col-md-6 px-5 has-height-lg middle-items">
                 <h3>සාහිත්‍ය අනුකමිටුව</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, laboriosam doloremque odio delectus, sunt magnam laborum impedit molestiae, magni quae ipsum, ullam eos! Alias suscipit impedit et, adipisci illo quam.</p>
+                <p>"මාගේ දේශය අවදි කරනු මැන" ශිෂ්‍ය සාහිත්‍ය උළෙල - 2022 </br> මහා ශිෂ්‍ය සංගමය, සාහිත්‍ය අනුකමිටුව, පේරාදෙනිය විද්‍යාලය</p>
                 <div class="text-muted">
-                    <p><span class="ti-location-pin pr-3"></span> 12345 Fake ST NoWhere, AB Country</p>
-                    <p><span class="ti-support pr-3"></span> (94)70 136 7886</p>
+                    <p><span class="ti-facebook pr-3"></span><a href = "https://www.facebook.com/MageDeshayaAwadiKaranuMena/" style = "color:#adb5bd">MageDeshayaAwadiKaranuMena</a></p>
+                    <p><span class="ti-support pr-3"></span> (94)70 136 7886 (කලිදු ) </p>
+					<p><span class="ti-support pr-3"></span> (94)76 666 5859 (ශානුක ) </p>
                     <p><span class="ti-email pr-3"></span>e19ruusara@gmail.com</p>
                 </div>
             </div>
@@ -338,16 +97,16 @@
         <div class="row">
             <div class="col-sm-4">
                 <h3>EMAIL US</h3>
-                <P class="text-muted">e19ruusara@gmail.com</P>
+                <P class="text-muted"><i class = "ti-email"> e19ruusara@gmail.com</i></P>
             </div>
             <div class="col-sm-4">
                 <h3>CALL US</h3>
-                <P class="text-muted">(94)70 136 7886</P>
-				<P class="text-muted">(94)76 666 5859</P>
+                <P class="text-muted"><i class = "ti-support"> (94)70 136 7886</i></P>
+				<P class="text-muted"><i class = "ti-support"> (94)76 666 5859</i></P>
             </div>
             <div class="col-sm-4">
                 <h3>FIND US</h3>
-                <P class="text-muted">12345 Fake ST NoWhere AB Country</P>
+                <P class="text-muted"><i class = "ti-facebook"><a href = "https://www.facebook.com/MageDeshayaAwadiKaranuMena/" style = "color:#adb5bd">MageDeshayaAwadiKaranuMena</a></i></P>
             </div>
         </div>
     </div>
