--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card bg-transparent border my-3 my-md-0">
-                            <img src="assets/imgs/event2.jpg" class="rounded-0 card-img-top mg-responsive">
+                            <img src="assets/imgs/concept2.jpg" class="rounded-0 card-img-top mg-responsive">
                             <div class="card-body">
                                 <h4 class="pt20 pb20">ඡායාරූප සැකසීම් තරගාවලිය</h4>
                                 <p class="text-white">නිර්මාණ භාරගැනීම <b>2022 ජූලි මස 12 </b<වන දින සිට <b>ජූලි මස 21</b> වන දින දක්වා විවෘතව ඇත. </p>
