--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="#about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#gallary">Gallary</a>
+                    <a class="nav-link" href="#gallary">Gallery</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#social">Social Media</a>
@@ -68,7 +68,7 @@
             <h1 class="display-2 font-weight-bold my-3">"මාගේ දේශය අවදි කරනු මැන"</h1>
             <h3 class="display-4 mb-5">ශිෂ්‍ය සාහිත්‍යය උළෙල</h3>
 			<h2 class="display-4 mb-5">2022</h2>
-            <a class="btn btn-lg btn-primary" href="gallary.html">View Our Gallary <i class="ti-location-arrow"></i></a>
+            <a class="btn btn-lg btn-primary" href="gallary.html">View Our Gallery <i class="ti-location-arrow"></i></a>
         </div>
     </header>
 
