--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="row justify-content-center">
                     <div class="col-sm-8 py-5 my-5", align="justify">
                         <h3 class="mb-4">හැදින්වීම</h3>
-                        <p><b><i>"මාගේ දේශය අවදි කරනු මැන"</b></i> ශිෂ්‍ය සාහිත්‍ය උළෙලට සමගාමීව, පේරාදෙනිය විශ්ව විද්‍යාලීය ඉංජිනේරු පීඨය විසින්  <b><i>"රූසර ඩිජිටල් නිර්මාණ තරගාවලිය"</b></i> දෙවන වරට සංවිධානය කරනු ලබයි. මෙම තරගාවලිය <b><i>හඬ කැවීම්, ඡායාරූප සැකසීම්, ඩිජිටල් චරිත සිතුවම් නිර්මාණය</b></i> යන ප්‍රධාන තරග අංශ යටතේ පැවැත්වේ. </p>
+                        <p><b><i>"මාගේ දේශය අවදි කරනු මැන"</b></i> ශිෂ්‍ය සාහිත්‍ය උළෙලට සමගාමීව, පේරාදෙණිය විශ්ව විද්‍යාලීය ඉංජිනේරු පීඨය විසින්  <b><i>"රූසර ඩිජිටල් නිර්මාණ තරගාවලිය"</b></i> දෙවන වරට සංවිධානය කරනු ලබයි. මෙම තරගාවලිය <b><i>හඬ කැවීම්, ඡායාරූප සැකසීම්, ඩිජිටල් චරිත සිතුවම් නිර්මාණය</b></i> යන ප්‍රධාන තරග අංශ යටතේ පැවැත්වේ. </p>
                         <h3 class="mb-4">කාල සීමාව</h3>
 						<p><b>2022 ජූලි මස</b> සිට <b>2022 අගෝසතු මස</b> දක්වා </p>
 						<h3 class="mb-4">අරමුණු</h3>
