--- a/indexeng.html
+++ b/indexeng.html
@@ -30,7 +30,7 @@
                     <a class="nav-link" href="#about">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#gallary">Gallary</a>
+                    <a class="nav-link" href="#gallary">Gallery</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#social">Social Media</a>
@@ -65,10 +65,10 @@
     <!-- header -->
     <header id="home" class="header">
         <div class="overlay text-white text-center">
-            <h1 class="display-2 font-weight-bold my-3">“Let my country be awake”</h1>
+            <h1 class="display-2 font-weight-bold my-3">“Let My Country Be Awake”</h1>
             <h3 class="display-4 mb-5">The Students’ Festival of Literature</h3>
 			<h2 class="display-4 mb-5">2022</h2>
-            <a class="btn btn-lg btn-primary" href="gallary.html">View Our Gallary <i class="ti-location-arrow"></i></a>
+            <a class="btn btn-lg btn-primary" href="gallary.html">View Our Gallery <i class="ti-location-arrow"></i></a>
         </div>
     </header>
 
@@ -84,12 +84,12 @@
                         <h3 class="mb-4">TIMELINE</h3>
 						<p>From <b>July 2022 </b> to <b>August 2022</b></p>
 						<h3 class="mb-4">OBJECTIVES</h3>
-                        <p>
+                       				 <ul>
 						<li>To improve the technical and aesthetic knowledge and interest in digital arts.</li>
 						<li>To improve creativity.</li>
 						<li>To exhibit the skills in digital arts. </li>
 						<li>To the enjoyment and appreciation of different kinds of digital arts. </li>
-						</p>
+						</ul>
                     </div>
                 </div>
             </div>
@@ -98,7 +98,7 @@
 
     <!--  gallary Section  -->
     <div id="gallary" class="text-center bg-dark text-light has-height-md middle-items wow fadeIn">
-        <h2 class="section-title">RUUSARA '21</h2>
+        <h2 class="section-title">RUUSARA '21 HIGHLIGHTS</h2>
     </div>
     <div class="gallary row">
         <div class="col-sm-6 col-lg-3 gallary-item wow fadeIn">
