--- a/indexeng.html
+++ b/indexeng.html
@@ -78,7 +78,7 @@
             <div class="col-lg-6 has-img-bg"></div>
             <div class="col-lg-6">
                 <div class="row justify-content-center">
-                    <div class="col-sm-8 py-5 my-5">
+                    <div class="col-sm-8 py-5 my-5", align="justify">
                         <h3 class="mb-4">INTRODUCTION</h3>
                         <p><b><i>“රූසර-2022, The Digital Art Competition”</i></b> is organized for the second consecutive time as one of the events which is organized along with <i><b>“Let my country be awake”</i></b>, The Students’ Festival of Literature organized by the Literary Subcommittee of University of Peradeniya. This competition consists of three main categories which are Dubbing, Photo Manipulation, and Comic Character Creation.</p>
                         <h3 class="mb-4">TIMELINE</h3>
